--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/spaghetti-carbonara.html">Spaghetti Carbonara</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/spaghetti-carbonara.html">Spaghetti Carbonara</a></li>
+    </ul>
 </body>
 </html>
