--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/spaghetti-carbonara.html">Spaghetti Carbonara</a></li>
+        <li><a href="recipes/chicken-alfredo.html">Chicken Alfredo</a></li>
     </ul>
 </body>
 </html>
